--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.vladimirbabenko.loftcoin">
 
+
+  <uses-permission android:name="android.permission.INTERNET"/>
+
+  <!--Необходимо зарегистрировать класс Application-->
+
   <application
+      android:name=".App"
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
